front-end/k8s/cluster-ip.yaml
apiVersion: v1
kind: Service
metadata:
  name: apihub-frontendv5
spec:
  type: ClusterIP
  selector:
    component: web
    student: sanghm
  ports:
    - port: 3000
      targetPort: 3000
