front-end/k8s/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: apihub-frontendv5
  annotations:
    kubernetes.io/ingress.class: nginx
    # nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: apihub-frontendv5.assignment.eks004.en.internal
      http:
        paths:
          - path: /
            backend:
              serviceName: apihub-frontendv5
              servicePort: 3000
